[package]
name = "vulkaneum"
version = "0.1.3"
edition = "2021"
authors = ["Michael <michaeljosephvaden03@gmail.com>"]
description = "Vulkan bindings with rust"
readme = "CRATEREADME.md"
license-file = "LICENSE.md"
keywords = ["gamedev", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]